--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -96,6 +96,7 @@
     "\n",
     "    'num_C':10,\n",
     "    'max_C':5.0,\n",
+    "    'unequal_C':1.5,\n",
     "}\n",
     "\n",
     "model = BufferStockModelClass(par=specs_illustrate)\n",
@@ -186,44 +187,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iegm:\n",
-      "69.9 ms ± 8.79 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "avg. log10 Euler error: -3.780 \n",
-      "\n",
-      "iegm:, chebyshev\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\bnl429\\Dropbox\\Projects\\2024_iEGM\\iEGM\\InterpolationFunctions.py:114: RuntimeWarning: invalid value encountered in arccos\n",
-      "  return np.cos(n*np.arccos(x))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "696 ms ± 90.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "avg. log10 Euler error: nan \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\bnl429\\Dropbox\\Projects\\2024_iEGM\\iEGM\\BufferStockModel.py:357: RuntimeWarning: Mean of empty slice\n",
-      "  sim.mean_log10_euler = np.nanmean(np.log10( abs(sim.euler/sim.c) + 1.0e-16));\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# model.par.method='vfi'\n",
     "# print(f'{model.par.method}:')\n",
@@ -242,6 +206,8 @@
     "\n",
     "\n",
     "# model.par.method='iegm'\n",
+    "# model.par.interp_method = 'linear'\n",
+    "# model.par.interp_inverse = False\n",
     "# print(f'{model.par.method}:')\n",
     "# %timeit model.solve()\n",
     "\n",
@@ -250,8 +216,29 @@
     "\n",
     "\n",
     "# model.par.method='iegm'\n",
+    "# model.par.interp_method = 'regression'\n",
+    "# model.par.interp_inverse = False\n",
+    "# print(f'{model.par.method}, regression:')\n",
+    "# %timeit model.solve()\n",
+    "\n",
+    "# model.simulate()\n",
+    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
+    "# model.par.method='iegm'\n",
+    "# model.par.interp_method = 'linear'\n",
     "# model.par.interp_inverse = True\n",
     "# print(f'{model.par.method}, inverse:')\n",
+    "# %timeit model.solve()\n",
+    "\n",
+    "# model.simulate()\n",
+    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
+    "# model.par.method='iegm'\n",
+    "# model.par.interp_method = 'regression'\n",
+    "# model.par.interp_inverse = True\n",
+    "# print(f'{model.par.method}, inverse regression:')\n",
     "# %timeit model.solve()\n",
     "\n",
     "# model.simulate()\n",
@@ -284,25 +271,37 @@
     "timing = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
     "    'egm':np.nan + np.zeros(MC_num),\n",
-    "    'iegm':dict(),\n",
-    "    'iegm, inverse':dict(),\n",
+    "    'iegm, linear':dict(),\n",
+    "    'iegm, linear inverse':dict(),\n",
+    "\n",
+    "    'iegm, regression':dict(),\n",
+    "    'iegm, regression inverse':dict(),\n",
     "}\n",
     "error = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
     "    'egm':np.nan + np.zeros(MC_num),\n",
-    "    'iegm':dict(),\n",
-    "    'iegm, inverse':dict(),\n",
+    "    'iegm, linear':dict(),\n",
+    "    'iegm, linear inverse':dict(),\n",
+    "    \n",
+    "    'iegm, regression':dict(),\n",
+    "    'iegm, regression inverse':dict(),\n",
     "}\n",
     "for i_c,num_C in enumerate(C_num_grid):\n",
-    "    timing['iegm'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "    error['iegm'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    timing['iegm, linear'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    error['iegm, linear'][num_C] = np.nan + np.zeros(MC_num)\n",
     "\n",
-    "    timing['iegm, inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "    error['iegm, inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    timing['iegm, linear inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    error['iegm, linear inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "\n",
+    "    timing['iegm, regression'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    error['iegm, regression'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "\n",
+    "    timing['iegm, regression inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    error['iegm, regression inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
     "\n",
     "# loop over Monte Carlo simulations\n",
     "for i_mc in range(MC_num):\n",
-    "    if PRINT: print(f'{i_mc+1}/{MC_num} running...',end='')\n",
+    "    if PRINT: print(f'{i_mc+1}/{MC_num} running...')\n",
     "    model = BufferStockModelClass(par=specs)\n",
     "    model.par.seed = i_mc\n",
     "    model.allocate()\n",
@@ -321,22 +320,25 @@
     "        error[model.par.method][i_mc] = model.sim.mean_log10_euler\n",
     "\n",
     "    # iEGM\n",
-    "    for interp_inverse in (False,True):\n",
-    "        model.par.interp_inverse = interp_inverse\n",
-    "        model.par.method = 'iegm'\n",
-    "        method = f'{model.par.method}, inverse' if interp_inverse else model.par.method\n",
-    "        for i_c,num_C in enumerate(C_num_grid):\n",
-    "            model.par.num_C = num_C\n",
-    "            model.allocate()\n",
+    "    model.par.method = 'iegm'\n",
+    "    for interp_method in ('linear','regression'):\n",
+    "        for interp_inverse in (False,True):\n",
+    "            if not ((interp_method=='regression') & (interp_inverse==False)): # only use inverse for regression.\n",
+    "                model.par.interp_method = interp_method\n",
+    "                model.par.interp_inverse = interp_inverse\n",
+    "                method = f'{model.par.method}, {interp_method} inverse' if interp_inverse else f'{model.par.method}, {interp_method}'\n",
+    "                for i_c,num_C in enumerate(C_num_grid):\n",
+    "                    model.par.num_C = num_C\n",
+    "                    model.allocate()\n",
     "\n",
-    "            # Timing\n",
-    "            t0 = time()\n",
-    "            model.solve()\n",
-    "            timing[method][num_C][i_mc] = time() - t0\n",
+    "                    # Timing\n",
+    "                    t0 = time()\n",
+    "                    model.solve()\n",
+    "                    timing[method][num_C][i_mc] = time() - t0\n",
     "\n",
-    "            # Euler error\n",
-    "            model.simulate()\n",
-    "            error[method][num_C][i_mc] = model.sim.mean_log10_euler\n"
+    "                    # Euler error\n",
+    "                    model.simulate()\n",
+    "                    error[method][num_C][i_mc] = model.sim.mean_log10_euler\n"
    ]
   },
   {
@@ -370,19 +372,25 @@
      "text": [
       "Euler Error & Timing (rel. to VFI)\n",
       "vfi: -3.486 & 1.000 \n",
-      "egm: -4.934 & 0.053 \n",
-      "iegm: \n",
-      "10 -2.089 & 0.069 \n",
-      "20 -2.544 & 0.055 \n",
-      "50 -3.281 & 0.055 \n",
-      "100 -3.765 & 0.063 \n",
-      "200 -4.236 & 0.060 \n",
-      "iegm, inverse: \n",
-      "10 -2.686 & 0.055 \n",
-      "20 -3.276 & 0.054 \n",
-      "50 -4.018 & 0.056 \n",
-      "100 -4.501 & 0.054 \n",
-      "200 -4.777 & 0.054 \n"
+      "egm: -4.934 & 0.052 \n",
+      "iegm, linear: \n",
+      "10 -1.951 & 0.051 \n",
+      "20 -1.937 & 0.052 \n",
+      "50 -3.027 & 0.047 \n",
+      "100 -3.699 & 0.051 \n",
+      "200 -4.414 & 0.051 \n",
+      "iegm, linear inverse: \n",
+      "10 -2.624 & 0.050 \n",
+      "20 -2.668 & 0.048 \n",
+      "50 -3.786 & 0.050 \n",
+      "100 -4.466 & 0.056 \n",
+      "200 -4.934 & 0.050 \n",
+      "iegm, regression inverse: \n",
+      "10 -2.680 & 0.063 \n",
+      "20 -2.819 & 0.068 \n",
+      "50 -2.592 & 0.064 \n",
+      "100 -2.083 & 0.065 \n",
+      "200 -2.450 & 0.072 \n"
      ]
     }
    ],
@@ -394,7 +402,7 @@
     "    time_now = np.mean(timing[method]) / timing_vfi\n",
     "    print(f'{method}: {error_now:2.3f} & {time_now:2.3f} ')\n",
     "\n",
-    "for method in ('iegm','iegm, inverse'):\n",
+    "for method in ('iegm, linear','iegm, linear inverse','iegm, regression inverse'):\n",
     "    print(f'{method}: ')\n",
     "    for i_c,num_C in enumerate(C_num_grid):\n",
     "        error_now = np.mean(error[method][num_C]) \n",
