re-run small MC

--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -94,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,14 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/10 running...2/10 running...3/10 running...4/10 running...5/10 running...6/10 running...7/10 running...8/10 running...9/10 running...10/10 running..."
+      "1/10 running...\n",
+      "2/10 running...\n",
+      "3/10 running...\n",
+      "4/10 running...\n",
+      "5/10 running...\n",
+      "6/10 running...\n",
+      "7/10 running...\n",
+      "8/10 running...\n",
+      "9/10 running...\n",
+      "10/10 running...\n"
      ]
     }
    ],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -381,26 +381,26 @@
      "output_type": "stream",
      "text": [
       "Euler Error & Timing (rel. to VFI)\n",
-      "vfi: -3.486 & 1.000 \n",
-      "egm: -4.934 & 0.052 \n",
+      "vfi: -3.563 & 1.000 \n",
+      "egm: -4.934 & 0.081 \n",
       "iegm, linear: \n",
-      "10 -1.951 & 0.051 \n",
-      "20 -1.937 & 0.052 \n",
-      "50 -3.027 & 0.047 \n",
-      "100 -3.699 & 0.051 \n",
-      "200 -4.414 & 0.051 \n",
+      "10 -1.951 & 0.090 \n",
+      "20 -1.937 & 0.082 \n",
+      "50 -3.027 & 0.087 \n",
+      "100 -3.699 & 0.084 \n",
+      "200 -4.414 & 0.088 \n",
       "iegm, linear inverse: \n",
-      "10 -2.624 & 0.050 \n",
-      "20 -2.668 & 0.048 \n",
-      "50 -3.786 & 0.050 \n",
-      "100 -4.466 & 0.056 \n",
-      "200 -4.934 & 0.050 \n",
+      "10 -2.624 & 0.083 \n",
+      "20 -2.668 & 0.083 \n",
+      "50 -3.786 & 0.081 \n",
+      "100 -4.466 & 0.086 \n",
+      "200 -4.934 & 0.080 \n",
       "iegm, regression inverse: \n",
-      "10 -2.680 & 0.063 \n",
-      "20 -2.819 & 0.068 \n",
-      "50 -2.592 & 0.064 \n",
-      "100 -2.083 & 0.065 \n",
-      "200 -2.450 & 0.072 \n"
+      "10 -2.680 & 0.101 \n",
+      "20 -2.819 & 0.101 \n",
+      "50 -2.592 & 0.104 \n",
+      "100 -2.083 & 0.111 \n",
+      "200 -2.450 & 0.093 \n"
      ]
     }
    ],
