--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -225,11 +225,20 @@
     "# model.simulate()\n",
     "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
     "\n",
-    "\n",
     "# model.par.method='iegm'\n",
     "# model.par.interp_method = 'linear'\n",
     "# model.par.interp_inverse = True\n",
     "# print(f'{model.par.method}, inverse:')\n",
+    "# %timeit model.solve()\n",
+    "\n",
+    "# model.simulate()\n",
+    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
+    "# model.par.method='iegm'\n",
+    "# model.par.interp_method = 'Bspline'\n",
+    "# model.par.interp_inverse = True\n",
+    "# print(f'{model.par.method}, inverse Bspline:')\n",
     "# %timeit model.solve()\n",
     "\n",
     "# model.simulate()\n",
@@ -284,8 +293,8 @@
     "    'iegm, linear':dict(),\n",
     "    'iegm, linear inverse':dict(),\n",
     "\n",
-    "    'iegm, regression':dict(),\n",
-    "    'iegm, regression inverse':dict(),\n",
+    "    'iegm, Bspline':dict(),\n",
+    "    'iegm, Bspline inverse':dict(),\n",
     "}\n",
     "error = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
@@ -293,8 +302,8 @@
     "    'iegm, linear':dict(),\n",
     "    'iegm, linear inverse':dict(),\n",
     "    \n",
-    "    'iegm, regression':dict(),\n",
-    "    'iegm, regression inverse':dict(),\n",
+    "    'iegm, Bspline':dict(),\n",
+    "    'iegm, Bspline inverse':dict(),\n",
     "}\n",
     "for i_c,num_C in enumerate(C_num_grid):\n",
     "    timing['iegm, linear'][num_C] = np.nan + np.zeros(MC_num)\n",
@@ -303,11 +312,11 @@
     "    timing['iegm, linear inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
     "    error['iegm, linear inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
     "\n",
-    "    timing['iegm, regression'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "    error['iegm, regression'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    timing['iegm, Bspline'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    error['iegm, Bspline'][num_C] = np.nan + np.zeros(MC_num)\n",
     "\n",
-    "    timing['iegm, regression inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
-    "    error['iegm, regression inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    timing['iegm, Bspline inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    error['iegm, Bspline inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
     "\n",
     "# loop over Monte Carlo simulations\n",
     "for i_mc in range(MC_num):\n",
@@ -331,24 +340,24 @@
     "\n",
     "    # iEGM\n",
     "    model.par.method = 'iegm'\n",
-    "    for interp_method in ('linear','regression'):\n",
+    "    for interp_method in ('linear','Bspline'):\n",
     "        for interp_inverse in (False,True):\n",
-    "            if not ((interp_method=='regression') & (interp_inverse==False)): # only use inverse for regression.\n",
-    "                model.par.interp_method = interp_method\n",
-    "                model.par.interp_inverse = interp_inverse\n",
-    "                method = f'{model.par.method}, {interp_method} inverse' if interp_inverse else f'{model.par.method}, {interp_method}'\n",
-    "                for i_c,num_C in enumerate(C_num_grid):\n",
-    "                    model.par.num_C = num_C\n",
-    "                    model.allocate()\n",
+    "            # if not ((interp_method=='Bspline') & (interp_inverse==False)): \n",
+    "            model.par.interp_method = interp_method\n",
+    "            model.par.interp_inverse = interp_inverse\n",
+    "            method = f'{model.par.method}, {interp_method} inverse' if interp_inverse else f'{model.par.method}, {interp_method}'\n",
+    "            for i_c,num_C in enumerate(C_num_grid):\n",
+    "                model.par.num_C = num_C\n",
+    "                model.allocate()\n",
     "\n",
-    "                    # Timing\n",
-    "                    t0 = time()\n",
-    "                    model.solve()\n",
-    "                    timing[method][num_C][i_mc] = time() - t0\n",
+    "                # Timing\n",
+    "                t0 = time()\n",
+    "                model.solve()\n",
+    "                timing[method][num_C][i_mc] = time() - t0\n",
     "\n",
-    "                    # Euler error\n",
-    "                    model.simulate()\n",
-    "                    error[method][num_C][i_mc] = model.sim.mean_log10_euler\n"
+    "                # Euler error\n",
+    "                model.simulate()\n",
+    "                error[method][num_C][i_mc] = model.sim.mean_log10_euler\n"
    ]
   },
   {
@@ -382,25 +391,31 @@
      "text": [
       "Euler Error & Timing (rel. to VFI)\n",
       "vfi: -3.563 & 1.000 \n",
-      "egm: -4.934 & 0.081 \n",
+      "egm: -4.934 & 0.088 \n",
       "iegm, linear: \n",
-      "10 -1.951 & 0.090 \n",
-      "20 -1.937 & 0.082 \n",
-      "50 -3.027 & 0.087 \n",
-      "100 -3.699 & 0.084 \n",
-      "200 -4.414 & 0.088 \n",
+      "10 -1.951 & 0.083 \n",
+      "20 -1.937 & 0.072 \n",
+      "50 -3.027 & 0.077 \n",
+      "100 -3.699 & 0.073 \n",
+      "200 -4.414 & 0.070 \n",
       "iegm, linear inverse: \n",
-      "10 -2.624 & 0.083 \n",
-      "20 -2.668 & 0.083 \n",
-      "50 -3.786 & 0.081 \n",
-      "100 -4.466 & 0.086 \n",
-      "200 -4.934 & 0.080 \n",
-      "iegm, regression inverse: \n",
-      "10 -2.680 & 0.101 \n",
-      "20 -2.819 & 0.101 \n",
-      "50 -2.592 & 0.104 \n",
-      "100 -2.083 & 0.111 \n",
-      "200 -2.450 & 0.093 \n"
+      "10 -2.624 & 0.072 \n",
+      "20 -2.668 & 0.073 \n",
+      "50 -3.786 & 0.088 \n",
+      "100 -4.466 & 0.076 \n",
+      "200 -4.934 & 0.092 \n",
+      "iegm, Bspline: \n",
+      "10 -3.444 & 0.150 \n",
+      "20 -3.721 & 0.134 \n",
+      "50 -4.771 & 0.147 \n",
+      "100 -4.917 & 0.161 \n",
+      "200 -4.933 & 0.130 \n",
+      "iegm, Bspline inverse: \n",
+      "10 -3.768 & 0.133 \n",
+      "20 -4.569 & 0.120 \n",
+      "50 -4.912 & 0.126 \n",
+      "100 -4.932 & 0.139 \n",
+      "200 -4.934 & 0.148 \n"
      ]
     }
    ],
@@ -412,7 +427,7 @@
     "    time_now = np.mean(timing[method]) / timing_vfi\n",
     "    print(f'{method}: {error_now:2.3f} & {time_now:2.3f} ')\n",
     "\n",
-    "for method in ('iegm, linear','iegm, linear inverse','iegm, regression inverse'):\n",
+    "for method in ('iegm, linear','iegm, linear inverse','iegm, Bspline','iegm, Bspline inverse'):\n",
     "    print(f'{method}: ')\n",
     "    for i_c,num_C in enumerate(C_num_grid):\n",
     "        error_now = np.mean(error[method][num_C]) \n",
