--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
     "    'max_C':5.0,\n",
     "    'max_m':5.0,\n",
     "\n",
-    "    'num_m':50,\n",
+    "    'num_m':100,\n",
     "    'T': 20,\n",
     "\n",
     "    'simN':10_000,\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +226,27 @@
     "\n",
     "\n",
     "# model.par.method='iegm'\n",
-    "# model.par.interp_method = 'regression'\n",
-    "# model.par.interp_inverse = False\n",
-    "# print(f'{model.par.method}, regression:')\n",
+    "# model.par.interp_method = 'linear'\n",
+    "# model.par.interp_inverse = True\n",
+    "# print(f'{model.par.method} linear inverse:')\n",
     "# %timeit model.solve()\n",
     "\n",
     "# model.simulate()\n",
     "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# model.par.method='iegm'\n",
+    "# model.par.interp_method = 'numerical'\n",
+    "# model.par.interp_inverse = False\n",
+    "# print(f'{model.par.method}, numerical:')\n",
+    "# %timeit model.solve()\n",
+    "\n",
+    "# model.simulate()\n",
+    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
     "\n",
     "# model.par.method='iegm'\n",
     "# model.par.interp_method = 'linear'\n",
@@ -273,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -304,6 +318,8 @@
     "\n",
     "    'iegm, Bspline':dict(),\n",
     "    'iegm, Bspline inverse':dict(),\n",
+    "\n",
+    "    'iegm, numerical':np.nan + np.zeros(MC_num),\n",
     "}\n",
     "error = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
@@ -313,6 +329,8 @@
     "    \n",
     "    'iegm, Bspline':dict(),\n",
     "    'iegm, Bspline inverse':dict(),\n",
+    "\n",
+    "    'iegm, numerical':np.nan + np.zeros(MC_num),\n",
     "}\n",
     "for i_c,num_C in enumerate(C_num_grid):\n",
     "    timing['iegm, linear'][num_C] = np.nan + np.zeros(MC_num)\n",
@@ -351,7 +369,6 @@
     "    model.par.method = 'iegm'\n",
     "    for interp_method in ('linear','Bspline'):\n",
     "        for interp_inverse in (False,True):\n",
-    "            # if not ((interp_method=='Bspline') & (interp_inverse==False)): \n",
     "            model.par.interp_method = interp_method\n",
     "            model.par.interp_inverse = interp_inverse\n",
     "            method = f'{model.par.method}, {interp_method} inverse' if interp_inverse else f'{model.par.method}, {interp_method}'\n",
@@ -366,32 +383,24 @@
     "\n",
     "                # Euler error\n",
     "                model.simulate()\n",
-    "                error[method][num_C][i_mc] = model.sim.mean_log10_euler\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print('Timing (rel. to VFI)')\n",
-    "# timing_vfi = np.mean(timing['vfi'])\n",
-    "# for method in ['vfi','egm']:\n",
-    "#     time_now = np.mean(timing[method]) / timing_vfi\n",
-    "#     print(f'{method}: {time_now:2.2f} ')\n",
+    "                error[method][num_C][i_mc] = model.sim.mean_log10_euler\n",
     "\n",
-    "        \n",
-    "# for method in ('iegm','iegm, inverse'):\n",
-    "#     print(f'{method}: ')\n",
-    "#     for i_c,num_C in enumerate(C_num_grid):\n",
-    "#         time_now = np.mean(timing[method][num_C]) / timing_vfi\n",
-    "#         print(f'{num_C:d}: {time_now:2.2f} ')"
+    "    model.par.interp_method = 'numerical'\n",
+    "    model.par.interp_inverse = False\n",
+    "    method = f'{model.par.method}, {model.par.interp_method}'\n",
+    "    # Timing\n",
+    "    t0 = time()\n",
+    "    model.solve()\n",
+    "    timing[method][i_mc] = time() - t0\n",
+    "\n",
+    "    # Euler error\n",
+    "    model.simulate()\n",
+    "    error[method][i_mc] = model.sim.mean_log10_euler\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -400,38 +409,39 @@
      "text": [
       "Euler Error & Timing (rel. to VFI)\n",
       "vfi: -3.563 & 1.000 \n",
-      "egm: -4.934 & 0.066 \n",
+      "egm: -4.934 & 0.072 \n",
+      "iegm, numerical: -4.934 & 0.114 \n",
       "iegm, linear: \n",
-      "10 -1.951 & 0.066 \n",
-      "20 -1.937 & 0.066 \n",
-      "50 -3.027 & 0.066 \n",
-      "100 -3.699 & 0.068 \n",
+      "10 -1.951 & 0.075 \n",
+      "20 -1.937 & 0.069 \n",
+      "50 -3.027 & 0.070 \n",
+      "100 -3.699 & 0.064 \n",
       "200 -4.414 & 0.067 \n",
       "iegm, linear inverse: \n",
-      "10 -2.624 & 0.067 \n",
-      "20 -2.668 & 0.069 \n",
-      "50 -3.786 & 0.076 \n",
-      "100 -4.466 & 0.067 \n",
+      "10 -2.624 & 0.066 \n",
+      "20 -2.668 & 0.065 \n",
+      "50 -3.786 & 0.070 \n",
+      "100 -4.466 & 0.068 \n",
       "200 -4.934 & 0.070 \n",
       "iegm, Bspline: \n",
-      "10 -3.444 & 0.077 \n",
+      "10 -3.444 & 0.078 \n",
       "20 -3.721 & 0.078 \n",
-      "50 -4.771 & 0.079 \n",
-      "100 -4.917 & 0.076 \n",
-      "200 -4.933 & 0.081 \n",
+      "50 -4.771 & 0.077 \n",
+      "100 -4.917 & 0.074 \n",
+      "200 -4.933 & 0.076 \n",
       "iegm, Bspline inverse: \n",
-      "10 -3.768 & 0.078 \n",
-      "20 -4.569 & 0.081 \n",
-      "50 -4.912 & 0.077 \n",
-      "100 -4.932 & 0.079 \n",
-      "200 -4.934 & 0.082 \n"
+      "10 -3.768 & 0.075 \n",
+      "20 -4.569 & 0.075 \n",
+      "50 -4.912 & 0.078 \n",
+      "100 -4.932 & 0.077 \n",
+      "200 -4.934 & 0.079 \n"
      ]
     }
    ],
    "source": [
     "print('Euler Error & Timing (rel. to VFI)')\n",
     "timing_vfi = np.mean(timing['vfi'])\n",
-    "for method in ('vfi','egm'):\n",
+    "for method in ('vfi','egm','iegm, numerical'):\n",
     "    error_now = np.mean(error[method])\n",
     "    time_now = np.mean(timing[method]) / timing_vfi\n",
     "    print(f'{method}: {error_now:2.3f} & {time_now:2.3f} ')\n",
