buffer-stock mc new setup

--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "MC_num = 200 # number of Monte Carlo simulations\n",
-    "C_num_grid = (10,20,50,100,200) # number of grid points in consumption grid i iEGM\n",
+    "C_num_grid = (20,50,100,200) # number of grid points in consumption grid i iEGM\n",
     "specs = { # common specifications across methods\n",
     "    'rho':1.5,\n",
     "\n",
@@ -534,13 +534,15 @@
     }
    ],
    "source": [
-    "print('Euler Error & lifetime util & Timing (rel. to VFI)')\n",
+    "# print('Euler Error & lifetime util & Timing (rel. to VFI)')\n",
+    "print('lifetime util & Timing (rel. to VFI)')\n",
     "timing_vfi = np.mean(timing['vfi'])\n",
     "for method in ('vfi','egm','iegm, numerical'):\n",
     "    error_now = np.mean(error[method])\n",
     "    util_now = np.mean(util[method])\n",
     "    time_now = np.mean(timing[method]) / timing_vfi\n",
-    "    print(f'{method}: {error_now:2.2f} &  {util_now:2.2f} & {time_now:2.2f} ')\n",
+    "    # print(f'{method}: {error_now:2.2f} &  {util_now:2.2f} & {time_now:2.2f} ')\n",
+    "    print(f'{method}: {util_now:2.2f} & {time_now:2.2f} ')\n",
     "\n",
     "for method in ('iegm, linear','iegm, linear inverse','iegm, Bspline','iegm, Bspline inverse'):\n",
     "    print(f'{method}: ')\n",
@@ -548,7 +550,8 @@
     "        error_now = np.mean(error[method][num_C]) \n",
     "        util_now = np.mean(util[method][num_C]) \n",
     "        time_now = np.mean(timing[method][num_C]) / timing_vfi\n",
-    "        print(f'{num_C:d} {error_now:2.2f} & {util_now:2.2f} & {time_now:2.2f} ')"
+    "        # print(f'{num_C:d} {error_now:2.2f} & {util_now:2.2f} & {time_now:2.2f} ')\n",
+    "        print(f'{num_C:d} {util_now:2.2f} & {time_now:2.2f} ')"
    ]
   }
  ],
